Contact page, added js script to mailto:jurassicbark and added an alert, also fixed the tiny gap below footer on 768px - 1024px. Updated _bugfixing.md

--- a/contact.css
+++ b/contact.css
@@ -321,3 +321,17 @@ body {
   }
 }
 
+/* FIXED CONTACT US FOOTER GAP */
+@media only screen and (max-width: 1188px) and (min-width: 930px) {
+  body {
+    min-height: 100vh;
+  }
+  .HomeFooter {
+    margin-top: 40px;          
+  }
+
+  .footerBg {
+    height: auto;
+    min-height: 240px;
+  }
+} 
